--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Vicki Wong" width="80">
+          <img src="./assets/images/profilepicture.jpg" alt="Vicki Wong" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Vicki Wong</h1>
+          <h1 class="name" title="Vicki Wong">Vicki Wong</h1>
 
           <p class="title">Software Engineer</p>
         </div>
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:richard@example.com" class="contact-link">vicki.wong85@gmail.com</a>
+              <a href="mailto:vicki.wong85@gmail.com" class="contact-link">vicki.wong85@gmail.com</a>
             </div>
 
           </li>
@@ -88,7 +88,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+12133522795" class="contact-link">+1 (214) 907-8871</a>
+              <a href="tel:+12149078871" class="contact-link">+1 (214) 907-8871</a>
             </div>
 
           </li>
@@ -116,7 +116,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Los Angeles, California, USA</address>
+              <address>Huntington Beach / Los Angeles, California, USA 92647</address>
             </div>
 
           </li>
@@ -128,20 +128,16 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+            <a href="https://www.linkedin.com/in/vickiwong85/" 
+              class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
+            <a href="https://github.com/vickiwong85" 
+              class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
@@ -371,15 +367,11 @@
                   <img src="./assets/images/avatar-4.png" alt="Henry william" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Henry william</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Andrew Thresher</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    I was blessed to work with Vicki for a year while we built efficient, production ready code together. She not only has the skills to deliver products, but also the grit and determination to get the job done right. She cares about every aspect of her job, as well as those around her. She is a team player, and I would be happy to work with her again.
                   </p>
                 </div>
 
