--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/profilepicture.jpg" alt="Vicki Wong" width="80">
+          <img src="./assets/images/vickiprofile.jpg" alt="Vicki Wong" width="80">
         </figure>
 
         <div class="info-content">
@@ -265,10 +265,11 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-1.png" alt="Andrew Thresher" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/Andrew.jpg" alt="Andrew Thresher" width="60" data-testimonials-avatar>
                 </figure>
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Andrew Thresher</h4>
+                <h5 class="h5 testimonials-item-title" data-testimonials-title>Staff Software Engineer</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
