--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Los Angeles & Irvine, California, </address>
+              <address>Los Angeles & Irvine, California </address>
             </div>
 
           </li>
@@ -272,7 +272,6 @@
                 </figure>
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Andrew Thresher</h4>
-                <h5 class="h5 testimonials-item-title" data-testimonials-title>Staff Software Engineer</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
@@ -402,7 +401,7 @@
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Full Stack Software Engineer</h4>
-              <h4 class="h4 timeline-item-title">Software Engineering Applications: E-Commerce Website Redesign </h4>
+              <h4 class="h4 timeline-item-title">E-Commerce Website Redesign </h4>
 
               <span> 10/2022 - 12/2022 </span>
 
@@ -417,7 +416,7 @@
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Back End Developer</h4>
-              <h4 class="h4 timeline-item-title">Software Engineering Applications: Old School (Youtube) </h4>
+              <h4 class="h4 timeline-item-title">Old School (Youtube) </h4>
 
               <span> 10/2022 - 12/2022 </span>
 
