--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+  <title>Vicki Wong - Personal Portfolio</title>
 
   <!--
     - favicon
@@ -384,7 +384,7 @@
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Software Engineer</h4>
-              <h4 class="h4 timeline-item-title">Dottid</h4>
+              <h5 class="h4 timeline-item-title" href="https://dottid.com/">Dottid: SaaS CRE Asset Management Platform</h5>
               <span>12/2022 — 11/2023</span>
 
               <p class="timeline-text">
@@ -400,8 +400,8 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Full Stack Software Engineer</h4>
-              <h4 class="h4 timeline-item-title">E-Commerce Website Redesign </h4>
+              <h4 class="h4 timeline-item-title">Full Stack Engineer</h4>
+              <h5 class="h4 timeline-item-title">E-Commerce Website Redesign</h5>
 
               <span> 10/2022 - 12/2022 </span>
 
@@ -409,21 +409,54 @@
                 - Architected the front end to display product information, photos in a carousel, and related products using React, Styled Components, and Flexbox to deliver a user-friendly experience with modularized components </br>
                 - Backed the front-end service with RESTful API backend and an Express server to deliver static site content while protecting the privacy of API tokens </br>
                 - Deployed an AWS EC2 instance and persisted a user-customized outfit list using user-local data storage </br>
+                - Reduced a monolithic, legacy server architecture into a microservice architecture to improve scalability </br>
+                - Utilized horizontal scaling practices (AWS, Nginx) to increase load capacity up to 1000 requests per second </br>
+                - Optimized PostgreSQL queries and server architecture with an average response time of 8ms and 0% error rate </br>
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Back End Developer</h4>
-              <h4 class="h4 timeline-item-title">Old School (Youtube) </h4>
+              <h4 class="h4 timeline-item-title">Full Stack Engineer</h4>
+              <h5 class="h4 timeline-item-title">Old School: Accessible Video Sharing Platform</h5>
 
               <span> 10/2022 - 12/2022 </span>
 
               <p class="timeline-text">
                 - Created an accessible user experience for an older target audience on a responsive app using Javascript, Bootstrap, CSS, and Styled Components </br>
                 - Utilized  Cloudinary and MongoDB to streamline and store video uploads from multiple sources </br>
-                - Designed an admin service using React and EmailJS to manage videos and comments flagged by other users and notify them through email when their content has been removed </br>
+                - Designed an admin service using React and EmailJS to manage videos and comments flagged by other users and notify them through email when their content has been removed </br> 
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Full Stack Engineer</h4>
+              <h5 class="h4 timeline-item-title">PokéQuiz: student engagement assessment tool</h5>
+
+              <span> 10/2022 - 12/2022 </span>
+
+              <p class="timeline-text">
+                - Designed and built an MVP project using React, PostgreSQL, and Material UI in 48 hours to increase
+                    student engagement in assessments using an external API and storing scores with PostgreSQL </br>
+                - Utilized Auth0 authentication to facilitate user login through their Google accounts </br>
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">PreAP & AP Biology Teacher</h4>
+              <h5 class="h4 timeline-item-title">Frisco ISD</h5>
+
+              <span> 07/2019 - 05/2022 </span>
+
+              <p class="timeline-text">
+                - Achieved a 91% student pass rate of above average scores on the AP Biology Exam with a 
+                combined 3.8 average compared to the 2.8 Texas average </br>
+                - Designed lessons in the biology curriculum to promote engagement and innovative technology use </br>
               </p>
 
             </li>
@@ -446,41 +479,49 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Hack Reactor</h4>
 
-              <span>2007 — 2008</span>
+              <span>07/2022 - 10/2022</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Advanced Software Engineering Certificate
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Southern Methodist University</h4>
 
-              <span>2006 — 2007</span>
+              <span>2018 - 2019</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                Master's in Education with 7-12 Life Sciences Certification - GPA: 4.0
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">Southern Methodist University</h4>
 
-              <span>2002 — 2004</span>
+              <span>2014 - 2018</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                BS in Biology, Minor in Business Administration and Chinese </br>
+                - Relevant Courses: Information Technology and Operations Management & Calculus I/II/III</br>
+                - Summa cum laude, Phi Beta Kappa, Dedman College Honor Roll with Distinction, Hamilton Research Scholar - GPA: 3.9</br>
+              </p>
+
+            </li>
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Texas Academy of Mathematics and Science</h4>
+
+              <span>2012 - 2014</span>
+
+              <p class="timeline-text">
+                Early college residential program for students gifted in math and science</br>
               </p>
 
             </li>
@@ -494,59 +535,74 @@
           <h3 class="h3 skills-title">My skills</h3>
 
           <ul class="skills-list content-card">
-
-            <li class="skills-item">
-
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
-              </div>
+                  <h5 class="h5">Adaptability, Teamwork</h5>
+                  <data value="100">100%</data>
+                </div>
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 100%"></div>
+                </div>
+              </li>
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Front End Development</h5>
+                  <data value="80">80%</data>
+                </div>
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 80%"></div>
+                </div>
+              </li>
+            
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Agile&Scrum Development Methodologies</h5>
+                  <data value="70">70%</data>
+                </div>
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 70%"></div>
+                </div>
+              </li>
 
-            </li>
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Node.Js</h5>
+                  <data value="60">60%</data>
+                </div>
 
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
-              </div>
-
-            </li>
-
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 60%"></div>
+                </div>
+              </li>
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">TypeScript</h5>
+                  <data value="60">60%</data>
+                </div>
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 60%"></div>
+                </div>
+              </li>
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">GraphQL</h5>
+                  <data value="50">50%</data>
+                </div>
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 50%"></div>
+                </div>
+              </li>
+              <li class="skills-item">
+                  <div class="title-wrapper">
+                    <h5 class="h5">Mobile Development (React Native)</h5>
+                    <data value="I 40">40%</data>
+                  </div>
+  
+                  <div class="skill-progress-bg">
+                    <div class="skill-progress-fill" style="width: 80%"></div>
+                  </div>
+                </li>
+            
           </ul>
 
         </section>
