--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vicki Wong - Personal Portfolio</title>
+  <title>Vicki Wong</title>
 
   <!--
     - favicon
@@ -384,7 +384,7 @@
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Software Engineer</h4>
-              <h5 class="h4 timeline-item-title" href="https://dottid.com/">Dottid: SaaS CRE Asset Management Platform</h5>
+              <h5 class="h4 timeline-item-title">Dottid: SaaS CRE Asset Management Platform</h5>
               <span>12/2022 — 11/2023</span>
 
               <p class="timeline-text">
@@ -481,7 +481,7 @@
 
               <h4 class="h4 timeline-item-title">Hack Reactor</h4>
 
-              <span>07/2022 - 10/2022</span>
+              <span>2022</span>
 
               <p class="timeline-text">
                 Advanced Software Engineering Certificate
@@ -535,6 +535,7 @@
           <h3 class="h3 skills-title">My skills</h3>
 
           <ul class="skills-list content-card">
+            <li class="skills-item">
               <div class="title-wrapper">
                   <h5 class="h5">Adaptability, Teamwork</h5>
                   <data value="100">100%</data>
