--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <p>
            While teaching online during the pandemic, I learned how truly powerful technology can be and discovered my passion for coding. After graduating from
             the advanced software engineering boot camp, Hack Reactor, I gained experience creating user-friendly features with clean and efficient code at a Saas startup using 
-            React, Typescript, Node, and GraphQL. I am looking for my next role - please reach out if you think we would work well together!
+            React, Typescript, Node, and GraphQL. I am currently seeking my next adventure - please reach out if you think we would work well together!
           </p>
         </section>
 
@@ -496,7 +496,8 @@
               <span>2018 - 2019</span>
 
               <p class="timeline-text">
-                Master's in Education with 7-12 Life Sciences Certification - GPA: 4.0
+                Master's in Education with 7-12 Life Sciences Certification</br>
+                - GPA: 4.0
               </p>
 
             </li>
@@ -510,7 +511,8 @@
               <p class="timeline-text">
                 BS in Biology, Minor in Business Administration and Chinese </br>
                 - Relevant Courses: Information Technology and Operations Management & Calculus I/II/III</br>
-                - Summa cum laude, Phi Beta Kappa, Dedman College Honor Roll with Distinction, Hamilton Research Scholar - GPA: 3.9</br>
+                - Summa cum laude, Phi Beta Kappa, Dedman College Honor Roll with Distinction, Hamilton Research Scholar</br>
+                - GPA: 3.9</br>
               </p>
 
             </li>
@@ -596,11 +598,11 @@
               <li class="skills-item">
                   <div class="title-wrapper">
                     <h5 class="h5">Mobile Development (React Native)</h5>
-                    <data value="I 40">40%</data>
+                    <data value="40">40%</data>
                   </div>
   
                   <div class="skill-progress-bg">
-                    <div class="skill-progress-fill" style="width: 80%"></div>
+                    <div class="skill-progress-fill" style="width: 40%"></div>
                   </div>
                 </li>
             
@@ -665,15 +667,11 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
-              </li>
-
-              <li class="select-item">
-                <button data-select-item>Applications</button>
-              </li>
-
-              <li class="select-item">
                 <button data-select-item>Web development</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Mobile Applications</button>
               </li>
 
             </ul>
@@ -693,7 +691,7 @@
                   <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Portfolio Performance</h3>
 
                 <p class="project-category">Web development</p>
 
@@ -711,84 +709,12 @@
                   <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">UI Revamp</h3>
 
                 <p class="project-category">Web development</p>
 
               </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Fundo</h3>
-
-                <p class="project-category">Web design</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Brawlhalla</h3>
-
-                <p class="project-category">Applications</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
-                </figure>
-
-                <h3 class="project-title">DSM.</h3>
-
-                <p class="project-category">Web design</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">MetaSpark</h3>
-
-                <p class="project-category">Web design</p>
-
-              </a>
-            </li>
+            </li>   
 
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="#">
@@ -798,17 +724,17 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/project-7.png" alt="deal terms export" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Summary</h3>
+                <h3 class="project-title">Deal Terms Export</h3>
 
                 <p class="project-category">Web development</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <li class="project-item  active" data-filter-item data-category="mobile applications">
               <a href="#">
 
                 <figure class="project-img">
@@ -816,12 +742,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
+                  <img src="./assets/images/project-8.jpg" alt="dottid mobile app" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Task Manager</h3>
+                <h3 class="project-title">Dottid Mobile App</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">Mobile Applications</p>
 
               </a>
             </li>
