--- a/index.html
+++ b/index.html
@@ -768,6 +768,60 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-9.png" alt="Pokéquiz" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Pokéquiz</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-9.png" alt="Old School" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Old School</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-9.png" alt="ecommerce redesign" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">E-Commerce Redesign</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
           </ul>
 
         </section>
