--- a/index.html
+++ b/index.html
@@ -201,8 +201,10 @@
             education.
           <p>
            While teaching online during the pandemic, I learned how truly powerful technology can be and discovered my passion for coding. After graduating from
-            the advanced software engineering boot camp, Hack Reactor, I gained experience creating user-friendly features with clean and efficient code at a Saas startup using 
-            React, Typescript, Node, and GraphQL. I am currently seeking my next adventure - please reach out if you think we would work well together!
+            the advanced software engineering boot camp, Hack Reactor, I gained experience creating user-friendly features with clean and efficient code at a SaaS startup using 
+            React, Typescript, Node, and GraphQL. 
+          <p>
+            I am currently seeking my next adventure - please reach out if you think we would work well together!
           </p>
         </section>
 
@@ -228,6 +230,38 @@
 
                 <p class="service-item-text">
                   High-quality development of sites at the professional level.
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Mobile apps</h4>
+
+                <p class="service-item-text">
+                  Professional development of applications for iOS and Android.
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Mobile apps</h4>
+
+                <p class="service-item-text">
+                  Professional development of applications for iOS and Android.
                 </p>
               </div>
 
@@ -378,7 +412,11 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Experience</h3>
+            <h3 class="h3">
+                <a href="./assets/images/Resume.pdf" class="h3" download
+                  >Experience (Full Resume here)</a
+                >
+              </h3>
           </div>
 
           <ol class="timeline-list">
@@ -390,12 +428,12 @@
               <span>12/2022 — 11/2023</span>
 
               <p class="timeline-text">
-                - Enhanced the web and mobile platform through full-stack feature development, testing, and bug fixes <br/>
-                - Revamped the web and mobile platform to boost platform visibility and optimize UI real estate, resulting in a more efficient user experience, using React, React Native, Storybook, and Material UI to refactor and optimize platform tables </br>
-                - Enhanced front-end codebase with TypeScript and GraphQL types, reducing bugs and saving development time </br>
+                - Enhanced the web and mobile platform through <b>full-stack</b> feature development, testing, and bug fixes with an <b>Agile</b> team<br/>
+                - Revamped the web and mobile platform to boost platform visibility and optimize UI real estate, resulting in a more efficient user experience, using <b>React, React Native, Storybook, and Material UI</b> to refactor and optimize platform tables </br>
+                - Enhanced front-end codebase with <b>TypeScript</b> and <b>GraphQL</b> types, reducing bugs and saving development time </br>
                 - Architected complex calculations and functions for unit conversion, rent scheduling, and imports/exports with CSV files, optimizing data processing using Sequelize and SQL </br>
-                - Transformed an existing client chat box into a cutting-edge AI chatbot, ushering in advanced AI capabilities to empower the business <br/>
-                - Awarded the Dottid Ladies Quarter Award in recognition of high productivity and technical excellence </br>
+                - Transformed an existing client chat box into a cutting-edge <b>AI</b> chatbot, ushering in advanced AI capabilities to empower the business <br/>
+                - Awarded the <b>Dottid Ladies Quarter Award</b> in recognition of high productivity and technical excellence </br>
               </p>
 
             </li>
@@ -409,11 +447,11 @@
 
               <p class="timeline-text">
                 - Architected the front end to display product information, photos in a carousel, and related products using React, Styled Components, and Flexbox to deliver a user-friendly experience with modularized components </br>
-                - Backed the front-end service with RESTful API backend and an Express server to deliver static site content while protecting the privacy of API tokens </br>
-                - Deployed an AWS EC2 instance and persisted a user-customized outfit list using user-local data storage </br>
-                - Reduced a monolithic, legacy server architecture into a microservice architecture to improve scalability </br>
+                - Backed the front-end service with <b>RESTful API</b> backend and an <b>Express</b> server to deliver static site content while protecting the privacy of API tokens </br>
+                - Deployed an <b>AWS EC2</b> instance and persisted a user-customized outfit list using user-local data storage </br>
+                - Reduced a monolithic, legacy server architecture into a <b>microservice</b> architecture to improve scalability </br>
                 - Utilized horizontal scaling practices (AWS, Nginx) to increase load capacity up to 1000 requests per second </br>
-                - Optimized PostgreSQL queries and server architecture with an average response time of 8ms and 0% error rate </br>
+                - Optimized <b>PostgreSQL</b> queries and server architecture with an average response time of 8ms and 0% error rate </br>
               </p>
 
             </li>
@@ -426,9 +464,9 @@
               <span> 10/2022 - 12/2022 </span>
 
               <p class="timeline-text">
-                - Created an accessible user experience for an older target audience on a responsive app using Javascript, Bootstrap, CSS, and Styled Components </br>
-                - Utilized  Cloudinary and MongoDB to streamline and store video uploads from multiple sources </br>
-                - Designed an admin service using React and EmailJS to manage videos and comments flagged by other users and notify them through email when their content has been removed </br> 
+                - Created an accessible user experience for an older target audience on a responsive app using <b>Javascript, Bootstrap, CSS, and Styled Components</b></br>
+                - Utilized  Cloudinary and <b>MongoDB</b> to streamline and store video uploads from multiple sources </br>
+                - Designed an admin service using <b>React</b> and <b>EmailJS</b> to manage videos and comments flagged by other users and notify them through email when their content has been removed </br> 
               </p>
 
             </li>
@@ -443,7 +481,7 @@
               <p class="timeline-text">
                 - Designed and built an MVP project using React, PostgreSQL, and Material UI in 48 hours to increase
                     student engagement in assessments using an external API and storing scores with PostgreSQL </br>
-                - Utilized Auth0 authentication to facilitate user login through their Google accounts </br>
+                - Utilized <b>Auth0</b> authentication to facilitate user login through their Google accounts </br>
               </p>
 
             </li>
