--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/PortfolioPerformance.gif" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Portfolio Performance</h3>
@@ -742,7 +742,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/revamp.gif" alt="revamp" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">UI Revamp</h3>
@@ -760,7 +760,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-7.png" alt="deal terms export" loading="lazy">
+                  <img src="./assets/images/dealterms.gif" alt="deal terms export" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Deal Terms Export</h3>
@@ -778,7 +778,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-8.jpg" alt="dottid mobile app" loading="lazy">
+                  <img src="./assets/images/mobile.jpeg" alt="dottid mobile app" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Dottid Mobile App</h3>
@@ -796,7 +796,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-9.png" alt="Company Pages" loading="lazy">
+                  <img src="./assets/images/companypages.png" alt="Company Pages" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Company Pages</h3>
@@ -814,7 +814,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-9.png" alt="Pokéquiz" loading="lazy">
+                  <img src="./assets/images/pokequiz.gif" alt="Pokéquiz" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Pokéquiz</h3>
@@ -832,7 +832,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-9.png" alt="Old School" loading="lazy">
+                  <img src="./assets/images/oldschoo.gif" alt="Old School" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Old School</h3>
@@ -850,7 +850,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-9.png" alt="ecommerce redesign" loading="lazy">
+                  <img src="./assets/images/ecommerce.gif" alt="ecommerce redesign" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">E-Commerce Redesign</h3>
