--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Mobile App development</h4>
 
                 <p class="service-item-text">
                   Professional development of applications for iOS and Android.
@@ -254,14 +254,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/pawprint.png" alt="paw print icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Touching Grass</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  I enjoy hiking, biking, and camping with my Maltipoo, Mojo, and my cat, Levi!
                 </p>
               </div>
 
@@ -270,14 +270,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/pizza.png" alt="food icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Foodie Adventures</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Taste testing local restaurants is one of my favorite hobbies.
                 </p>
               </div>
 
