--- a/index.html
+++ b/index.html
@@ -254,14 +254,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/pawprint.png" alt="paw print icon" width="40">
+                <img src="./assets/images/paw.png" alt="paw print icon" width="40">
               </div>
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Touching Grass</h4>
 
                 <p class="service-item-text">
-                  I enjoy hiking, biking, and camping with my Maltipoo, Mojo, and my cat, Levi!
+                  I enjoy hiking, biking, and camping with my Maltipoo, Mojo, and my cat, Levi.
                 </p>
               </div>
 
@@ -717,7 +717,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://dottid.com/dev-updates/2023/portfolio-performance-insights">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -735,25 +735,25 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://dottid.com/dev-updates/2023/5/31/qzg7cp1cwrhqqpjb69eg6uaccyqere">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/revamp.gif" alt="revamp" loading="lazy">
+                  <img src="./assets/images/companypages.png" alt="Company Pages" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">UI Revamp</h3>
+                <h3 class="project-title">Company Pages</h3>
 
                 <p class="project-category">Web development</p>
 
               </a>
-            </li>   
+            </li>  
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://dottid.com/dev-updates/2023/additional-rent">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -771,7 +771,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="mobile applications">
-              <a href="#">
+              <a href="https://dottid.com/mobile-app">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -789,17 +789,17 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://github.com/2207-FEC3-PlayStation/FrontEnd">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/companypages.png" alt="Company Pages" loading="lazy">
+                  <img src="./assets/images/ecommerce.gif" alt="ecommerce redesign" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Company Pages</h3>
+                <h3 class="project-title">E-Commerce Redesign</h3>
 
                 <p class="project-category">Web development</p>
 
@@ -807,7 +807,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://github.com/vickiwong85/pokequiz">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -825,35 +825,17 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://github.com/RFC-Blue-Ocean-Minas-Tirith/Old-School-Front-End">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/oldschoo.gif" alt="Old School" loading="lazy">
+                  <img src="./assets/images/oldschool.gif" alt="Old School" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Old School</h3>
-
-                <p class="project-category">Web development</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/ecommerce.gif" alt="ecommerce redesign" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">E-Commerce Redesign</h3>
 
                 <p class="project-category">Web development</p>
 
