--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <h4 class="h4 service-item-title">Foodie Adventures</h4>
 
                 <p class="service-item-text">
-                  Taste testing local restaurants is one of my favorite hobbies.
+                  Taste testing local restaurants is one of my favorite hobbies. Please let me know your SoCal recommendations.
                 </p>
               </div>
 
@@ -675,11 +675,11 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Mobile Applications</button>
-            </li>
-
-            <li class="filter-item">
               <button data-filter-btn>Web development</button>
+            </li>
+            
+            <li class="filter-item">
+              <button data-filter-btn>Mobile Applications</button>
             </li>
 
           </ul>
