--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Touching Grass</h4>
+                <h4 class="h4 service-item-title">Outdoor Recreation</h4>
 
                 <p class="service-item-text">
-                  I enjoy hiking, biking, and camping with my Maltipoo, Mojo, and my cat, Levi.
+                  When I'm not coding, I enjoy seeing the beautiful outdoors through hiking, biking, and camping with my Maltipoo, Mojo, and my cat, Levi.
                 </p>
               </div>
 
@@ -274,10 +274,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Foodie Adventures</h4>
+                <h4 class="h4 service-item-title">Gaming</h4>
 
                 <p class="service-item-text">
-                  Taste testing local restaurants is one of my favorite hobbies. Please let me know your SoCal recommendations.
+                  I love playing video games and board games. Some of my favorite games are Animal Crossing, Persona 5, Stardew Valley, Wingspan, and Catan.
                 </p>
               </div>
 
