--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/heart.png" type="image/x-icon">
 
   <!--
     - custom css link
@@ -270,7 +270,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/pizza.png" alt="food icon" width="40">
+                <img src="./assets/images/joycon.png" alt="food icon" width="40">
               </div>
 
               <div class="service-content-box">
